Добавил функцию rem-calc, сделал mixin для карточек пользователей в pug/mixins, сделал slider для FAQ, добавил кастомный скролл для classmates

--- a/src/pug/sections/_advertisement.pug
+++ b/src/pug/sections/_advertisement.pug
@@ -3,7 +3,7 @@ section.advertisement
         .advertisement__header
             h2.advertisement__titile Объявления
             span.divider
-            div.advertisement__buttons
+            .advertisement__buttons
                 .swiper-button-prev
                 .swiper-pagination
                 .swiper-button-next
