--- a/src/pug/sections/_main.pug
+++ b/src/pug/sections/_main.pug
@@ -2,6 +2,11 @@ main.main
     include ./_enter
     include ./_info
     include ./_portfolio
+    include ./_classmates
+    include ./_announcement
+
+    include ./_services
+
     include ./_advertisement
     include ./_news
     include ./_banner
