--- a/src/scss/blocks/_ads.scss
+++ b/src/scss/blocks/_ads.scss
@@ -15,7 +15,7 @@
   color: #6E7781;
   font-style: normal;
   font-weight: normal;
-  font-size: 26px;
+  font-size: rem-calc(26);
   line-height: 26px;
   margin: 0 21px 0px 0;
 }
