--- a/src/scss/blocks/_page-header.scss
+++ b/src/scss/blocks/_page-header.scss
@@ -114,8 +114,8 @@
 
 .page-header__logo-description {
   font-size: 20px;
-  font-weight: 400;
-  font-style: normal;
+  font-weight: 300;
+  color: $c-light;
   line-height: 23px;
   margin: 0;
   @media (min-width: $tablet) {
