--- a/src/scss/general/variables.scss
+++ b/src/scss/general/variables.scss
@@ -1,5 +1,6 @@
 $c-light: #ffffff;
-$c-blue: linear-gradient(90deg, #3464e0 0%, #2955c9 100%);
+$c-blue-background: linear-gradient(90deg, #3464e0 0%, #2955c9 100%);
+$c-blue: rgba(52, 100, 224, 1);
 $c-link: #9cbaf0;
 $c-grey: #f1f4f9;
 
