--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,6 +1,6 @@
 extends ../layouts/_main.pug
 
-include ./../mixins/_card.pug
+include ./../mixins/_users.pug
 
 block variables
     - const title = 'Студенческий портал - Главная';
