Добавил футер, надо адаптировать + ретинизировать графику

--- a/src/pug/sections/_advertisement.pug
+++ b/src/pug/sections/_advertisement.pug
@@ -3,21 +3,18 @@ section.advertisement
         .advertisement__header
             h2.advertisement__titile Объявления
             span.divider
-            .advertisement__buttons
-                .swiper-button-prev
-                .swiper-pagination
-                .swiper-button-next
+
         .swiper-wrapper.advertisement__wrapper
             // Slides
             .swiper-slide
                 .block.block--wide
                     .block__content.block__content--main
-                        h3.slider__item-title Студенческая весна. приглашаем на еженедельные онлайн-встречи!
+                        h3.slider__item-title Студенческая весна. приглашаем на еженедельные онлайн-встречи!
                         p.slider__item-descr.slider__item-descr--wide Приглашаем Вас принять участие в презентациях и консультациях, а также в мастер-классах Российского государственного социального университета
                         a(href="#").slider__item-link Подробнее
                     .block__content--aside
                         p.slider__item-date 19
-                            span сентября
+                            span Сентября
                         p.slider__item-state.slider__item-state--online Онлайн
             .swiper-slide
                 .block.block--medium.block--hot
@@ -26,7 +23,7 @@ section.advertisement
                         a(href="#").slider__item-link.slider__item-link--dark Подробнее
                     .block__content--aside
                         p.slider__item-date.slider__item-date--dark 19
-                            span сентября
+                            span Сентября
                         p.slider__item-state.slider__item-state--offline Офлайн
             .swiper-slide
                 .block.block--narrow
@@ -45,5 +42,9 @@ section.advertisement
                         a(href="#").slider__item-link Подробнее
                     .block__content--aside
                         p.slider__item-date 19
-                            span сентября
+                            span Сентября
                         p.slider__item-state.slider__item-state--online Онлайн
+        .advertisement__buttons
+            .swiper-button-prev
+            .swiper-pagination
+            .swiper-button-next
