--- a/src/pug/sections/_main.pug
+++ b/src/pug/sections/_main.pug
@@ -4,8 +4,9 @@ main.main
     include ./_portfolio
     include ./_classmates
     include ./_announcement
-
     include ./_services
+
+    include ./_faq
 
     include ./_advertisement
     include ./_news
