--- a/src/pug/layouts/_main.pug
+++ b/src/pug/layouts/_main.pug
@@ -1,7 +1,7 @@
 block variables
 
 <!DOCTYPE html>
-html(lang="en")
+html(lang="ru")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
@@ -15,7 +15,6 @@ html(lang="en")
 
         block content
         include ./../sections/_main.pug
-
         include ./../sections/_footer.pug
 
 script(src="js/script.min.js" type="module")
