--- a/src/scss/general/scaffolding.scss
+++ b/src/scss/general/scaffolding.scss
@@ -1,26 +1,6 @@
-:root {
-  font-size: 0.69445vw;
-
-  @media (max-width: $tablet) and (orientation: portrait) {
-    font-size: 3.125vw;
-
-    @media (min-width: $mobile) {
-      font-size: 2.5vw;
-    }
-  }
-
-  @media (max-width: $tablet) and (orientation: landscape) {
-    font-size: 1vw;
-
-    @media (max-width: $mobile) {
-      font-size: 2vw;
-    }
-  }
-}
-
-
 html {
   box-sizing: border-box;
+  font-size: 100%;
 }
 
 *,
@@ -36,7 +16,6 @@ body {
   min-width: 320px;
   min-height: 100vh;
   font-family: $font;
-  font-size: 16px;
   line-height: 1.1;
   font-style: normal;
   font-weight: 300;
@@ -52,7 +31,6 @@ body {
 
   @media (max-width: $tablet) and (orientation: portrait) {
     min-height: calc(var(--vh, 1vh) * 100);
-    font-size: 1.4rem;
   }
 
   &.menu-opened {
