--- a/src/pug/sections/_banner.pug
+++ b/src/pug/sections/_banner.pug
@@ -1,11 +1,8 @@
 section.banner
     .banner__wrapper
-        .banner__item
-            a.banner__link(href="#")
-                img.banner__image(src="img/banner.png" alt="Летний отдых 2020")
         .banner__item.banner__item--more
             a.banner__link(href="#")
                 img.banner__image(src="img/banner-covid.jpg" alt="Баннер Covid-19 информация")
-                .banner__info
+                .banner__info.banner__info--more
                     span.banner__info-title COVID-19
                     span.banner__info-description Актуальная информация
