--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -3,7 +3,7 @@ footer.footer
         .footer__section
             h2.footer__section-title Контакты
             ul.footer__contacts-list.footer__list
-                li.footer__contacts-item г. Москва, ул. Вильгельма Пика, дом 4, стр.1 корпус 2, этаж 4, кабинеты 14–15
+                li.footer__contacts-item г. Москва, ул. Вильгельма Пика, дом 4, <br> стр.1 корпус 2, этаж 4, кабинеты 14–15
                 li.footer__contacts-item Электронная почта:
                     a(href="mailto:info@rgsu.net").footer__contacts-link.footer__contacts-mail  info@rgsu.net <br>
                 li.footer__contacts-item Телефон:
@@ -11,7 +11,6 @@ footer.footer
         .footer__section
             h2.footer__section-title График работы
             p.footer__schedule Понедельник - Пятница: 09:00 - 18:00 <br> Суббота - Воскресенье: Выходные
-        .footer__section
             ul.footer__message-list.footer__list
                 li.footer__message-item
                     a(href="mailto:info@rgsu.net").footer__message-link.footer__message-link--mail Интернет приемная
@@ -31,14 +30,14 @@ footer.footer
                     a(href="mailto:info@rgsu.net").footer__services-link Официальный сайт
                 li.footer__services-item
                     a(href="mailto:info@rgsu.net").footer__services-link Виртуальная образовательная среда
-        .footer__social.social-block.footer__section
-            ul.social-block__list.footer__list
-                li.social-block__item
-                    a(href="mailto:info@rgsu.net").social-block__link.social-block__link--vk Вконтакте
-                li.social-block__item
-                    a(href="mailto:info@rgsu.net").social-block__link.social-block__link--fb Фейсбук
-                li.social-block__item
-                    a(href="mailto:info@rgsu.net").social-block__link.social-block__link--insta Инстаграм
+            .footer__social.social-block
+                ul.social-block__list.footer__list
+                    li.social-block__item
+                        a(href="mailto:info@rgsu.net").social-block__link.social-block__link--vk Вконтакте
+                    li.social-block__item
+                        a(href="mailto:info@rgsu.net").social-block__link.social-block__link--fb Фейсбук
+                    li.social-block__item
+                        a(href="mailto:info@rgsu.net").social-block__link.social-block__link--insta Инстаграм
     ul.footer__policy.footer__section.footer__list
         li.footer__policy-item
             a.footer__copyright © 2008-2020 РГСУ. Сделано в РГСУ
