--- a/src/pug/sections/_info.pug
+++ b/src/pug/sections/_info.pug
@@ -13,14 +13,14 @@ section.info-container.swiper-container
                 h4.info__card-title Портфолио
                 p.info__card-main.info__card-fellow <span>10 657</span>
                 p.info__card-sub Высококвалифицированных специалиста
-                a(href="#").info__card-about Подробнее
+                a(href="#").info__card-about.btn Подробнее
 
         .info__card-block.swiper-slide
             article.info__card-stack.info__card--vacancy
                 h4.info__card-title Вакансии
                 p.info__card-main.info__card-workers <span>34</span>
                 p.info__card-sub Вакансии для студентов университета
-                a(href="#").info__card-about Подробнее
+                a(href="#").info__card-about.btn Подробнее
 
         .info__card-block.info__card-media.swiper-slide
             article.info__card-stack.info__card-stack--half
