--- a/src/pug/sections/_portfolio-tabs.pug
+++ b/src/pug/sections/_portfolio-tabs.pug
@@ -1,13 +1,347 @@
 section.portfolio-tabs
-    h2.portfolio-tabs__title Портфолио по профессиям
-    .portfolio-tabs__buttons
-        button.btn.portolio-tabs__button.portfolio-tabs__button.portfolio-tabs__button--active
-        button.btn.portolio-tabs__button.portfolio-tabs__button.portfolio-tabs__button
-        button.btn.portolio-tabs__button.portfolio-tabs__button.portfolio-tabs__button
-        button.btn.portolio-tabs__button.portfolio-tabs__button.portfolio-tabs__button
-        button.btn.portolio-tabs__button.portfolio-tabs__button.portfolio-tabs__button
-    .portfolio-tabs__article.portfolio-tabs__article--active
-    .portfolio-tabs__article
-    .portfolio-tabs__article
-    .portfolio-tabs__article
-    .portfolio-tabs__article
+    .portfolio-tabs__container
+        .portfolio-tabs__header
+            h2.portfolio-tabs__title Портфолио по профессиям
+            span.divider
+        .portfolio-tabs__buttons
+            button(data-id="college").btn.portfolio-tabs__button.portfolio-tabs__button--active Колледж
+            button(data-id="bachelor").btn.portfolio-tabs__button Бакалавриат
+            button(data-id="specialty").btn.portfolio-tabs__button Специалитет
+            button(data-id="magistracy").btn.portfolio-tabs__button Магистратура
+            button(data-id="graduate").btn.portfolio-tabs__button Аспирантура
+        .portfolio-tabs__article.portfolio-tabs__article--active(id="college")
+            ul.portfolio__list
+                ul.portfolio__list-wrapper
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Банковское дело
+                            span.divider
+                            span.portfolio__counter 41
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Гостиничный сервис
+                            span.divider
+                            span.portfolio__counter 73
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Дизайн (по отраслям)
+                            span.divider
+                            span.portfolio__counter 27
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Издатльское дело
+                            span.divider
+                            span.portfolio__counter 21
+
+                ul.portfolio__list-wrapper
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Социальная работа
+                            span.divider
+                            span.portfolio__counter 41
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Страховое дело (по отраслям)
+                            span.divider
+                            span.portfolio__counter 73
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Туризм
+                            span.divider
+                            span.portfolio__counter 27
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Экономика и бухгалтерский учет (по отраслям)
+                            span.divider
+                            span.portfolio__counter 21
+
+                ul.portfolio__list-wrapper
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Информационные системы (по отраслям)
+                            span.divider
+                            span.portfolio__counter 41
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Право и организация социального обеспечения
+                            span.divider
+                            span.portfolio__counter 73
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Рациональное использование природохозяйственных комплексов
+                            span.divider
+                            span.portfolio__counter 27
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Издательское дело
+                            span.divider
+                            span.portfolio__counter 21
+
+        .portfolio-tabs__article(id="bachelor")
+            ul.portfolio__list
+                ul.portfolio__list-wrapper
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Небанковское дело
+                            span.divider
+                            span.portfolio__counter 41
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Гостиничный несервис
+                            span.divider
+                            span.portfolio__counter 73
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Дизайн (по отраслям)
+                            span.divider
+                            span.portfolio__counter 27
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Издатльское дело
+                            span.divider
+                            span.portfolio__counter 21
+
+                ul.portfolio__list-wrapper
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Социальная работа
+                            span.divider
+                            span.portfolio__counter 41
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Страховое дело (по отраслям)
+                            span.divider
+                            span.portfolio__counter 73
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Туризм
+                            span.divider
+                            span.portfolio__counter 27
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Экономика и бухгалтерский учет (по отраслям)
+                            span.divider
+                            span.portfolio__counter 21
+
+                ul.portfolio__list-wrapper
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Информационные системы (по отраслям)
+                            span.divider
+                            span.portfolio__counter 41
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Право и организация социального обеспечения
+                            span.divider
+                            span.portfolio__counter 73
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Рациональное использование природохозяйственных комплексов
+                            span.divider
+                            span.portfolio__counter 27
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Издательское дело
+                            span.divider
+                            span.portfolio__counter 21
+        .portfolio-tabs__article(id="specialty")
+            ul.portfolio__list
+                ul.portfolio__list-wrapper
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Банковское Недело
+                            span.divider
+                            span.portfolio__counter 41
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Гостиничный сервис
+                            span.divider
+                            span.portfolio__counter 73
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Дизайн (по отраслям)
+                            span.divider
+                            span.portfolio__counter 27
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Издатльское дело
+                            span.divider
+                            span.portfolio__counter 21
+
+                ul.portfolio__list-wrapper
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Социальная работа
+                            span.divider
+                            span.portfolio__counter 41
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Страховое дело (по отраслям)
+                            span.divider
+                            span.portfolio__counter 73
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Туризм
+                            span.divider
+                            span.portfolio__counter 27
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Экономика и бухгалтерский учет (по отраслям)
+                            span.divider
+                            span.portfolio__counter 21
+
+                ul.portfolio__list-wrapper
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Информационные системы (по отраслям)
+                            span.divider
+                            span.portfolio__counter 41
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Право и организация социального обеспечения
+                            span.divider
+                            span.portfolio__counter 73
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Рациональное использование природохозяйственных комплексов
+                            span.divider
+                            span.portfolio__counter 27
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Издательское дело
+                            span.divider
+                            span.portfolio__counter 21
+        .portfolio-tabs__article(id="magistracy")
+            ul.portfolio__list
+                ul.portfolio__list-wrapper
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Банковское дело
+                            span.divider
+                            span.portfolio__counter 41
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Гостиничный сервис
+                            span.divider
+                            span.portfolio__counter 73
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Дизайн (по отраслям)
+                            span.divider
+                            span.portfolio__counter 27
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Издатльское дело
+                            span.divider
+                            span.portfolio__counter 21
+
+                ul.portfolio__list-wrapper
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Социальная работа
+                            span.divider
+                            span.portfolio__counter 41
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Страховое дело (по отраслям)
+                            span.divider
+                            span.portfolio__counter 73
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Туризм
+                            span.divider
+                            span.portfolio__counter 27
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Экономика и бухгалтерский учет (по отраслям)
+                            span.divider
+                            span.portfolio__counter 21
+
+                ul.portfolio__list-wrapper
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Информационные системы (по отраслям)
+                            span.divider
+                            span.portfolio__counter 41
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Право и организация социального обеспечения
+                            span.divider
+                            span.portfolio__counter 73
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Рациональное использование природохозяйственных комплексов
+                            span.divider
+                            span.portfolio__counter 27
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Издательское дело
+                            span.divider
+                            span.portfolio__counter 21
+        .portfolio-tabs__article(id="graduate")
+            ul.portfolio__list
+                ul.portfolio__list-wrapper
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Банковское дело
+                            span.divider
+                            span.portfolio__counter 41
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Гостиничный сервис
+                            span.divider
+                            span.portfolio__counter 73
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Дизайн (по отраслям)
+                            span.divider
+                            span.portfolio__counter 27
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Издатльское дело
+                            span.divider
+                            span.portfolio__counter 21
+
+                ul.portfolio__list-wrapper
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Социальная работа
+                            span.divider
+                            span.portfolio__counter 41
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Страховое дело (по отраслям)
+                            span.divider
+                            span.portfolio__counter 73
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Туризм
+                            span.divider
+                            span.portfolio__counter 27
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Экономика и бухгалтерский учет (по отраслям)
+                            span.divider
+                            span.portfolio__counter 21
+
+                ul.portfolio__list-wrapper
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Информационные системы (по отраслям)
+                            span.divider
+                            span.portfolio__counter 41
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Право и организация социального обеспечения
+                            span.divider
+                            span.portfolio__counter 73
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Рациональное использование природохозяйственных комплексов
+                            span.divider
+                            span.portfolio__counter 27
+                    li.portfolio__item
+                        a.portfolio__link
+                            span.portfolio__description Издательское дело
+                            span.divider
+                            span.portfolio__counter 21
