--- a/src/scss/blocks/_ads.scss
+++ b/src/scss/blocks/_ads.scss
@@ -30,6 +30,11 @@
   .swiper-slide {
     width: 100%;
   }
+  @media (min-width: $tablet) {
+    .swiper-slide {
+      width: auto;
+    }
+  }
 }
 
 .advertisement__buttons {
