--- a/src/scss/blocks/_news.scss
+++ b/src/scss/blocks/_news.scss
@@ -15,6 +15,14 @@
   margin: 0 21px 0 0;
 }
 
+.news__item {
+  &:hover {
+    img {
+      transform: scale(1.1);
+    }
+  }
+}
+
 .news__item-title {
   font-style: normal;
   font-weight: 500;
@@ -113,10 +121,15 @@
 .news__picture {
   position: absolute;
   top: 0;
+  left: 0;
+  overflow: hidden;
+  border-radius: 4px;
+  z-index: -1;
   img {
     object-fit: cover;
     min-width: 300px;
     min-height: 300px;
+    transition: .5s;
   }
   &::after {
     content: '';
@@ -126,6 +139,11 @@
     position: absolute;
     top: 0;
     background: linear-gradient(180deg, rgba(68, 68, 68, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
+  }
+  &:hover {
+    img {
+      transform: scale(1.1);
+    }
   }
 }
 
