--- a/src/scss/blocks/btn.scss
+++ b/src/scss/blocks/btn.scss
@@ -1,15 +1,17 @@
 .btn {
   @include btn-reset;
   position: relative;
-  padding: 1.5rem 2.9rem;
-  text-transform: uppercase;
+  padding: 8px 25px;
   text-align: center;
-  font-family: $font-alt;
+  font-family: $font;
   font-weight: 400;
-  font-size: 2.4rem;
-  line-height: 3rem;
-  color: $c-blue;
-  letter-spacing: -0.04em;
+  font-size: rem-calc(16);
+  line-height: rem-calc(26);
+  border: 1px solid #C3CAD6;
+  box-sizing: border-box;
+  border-radius: 50px;
+  transition: .2s;
+  color: #C3CAD6;
 
   @media (min-width: $stop-scaling) {
     padding: 15px 29px;
@@ -34,25 +36,28 @@
     content: "";
     width: 100%;
     height: 100%;
-    background-color: $c-light;
-    border: 2px solid $c-light;
     border-radius: 3.5rem;
     z-index: -1;
   }
 
-  &:hover {
-    color: $c-grey;
-  }
+
 
   &:focus {
-    color: $c-grey;
+    color: #3464E0;
     outline: none;
+    border: 1px solid #3464E0;
+    background-color: transparent;
 
     &::before {
       width: 103%;
       height: 108.5%;
       border-color: $c-grey;
     }
+  }
+  &:hover {
+    background: #3464E0;
+    border: 1px solid #3464E0;
+    color: #fff;
   }
 
   &:active,
@@ -62,8 +67,6 @@
     &::before {
       width: 100%;
       height: 100%;
-      background-color: $c-grey;
-      border-color: $c-grey;
     }
   }
 }
